# FinalDjango

./: .env.exmple  .gitignore  README.md  pyproject.toml
config/: settings.py
recipes/: admin.py  forms.py  models.py
