[tool.poetry]
name = "finaldjango"
version = "0.1.0"
description = ""
authors = ["Alexsandr <artamoshkinas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
